# ethoscopy

./: .gitignore  README.md  check_conform.py  ptest.py  puff.pkl  pyproject.toml  setup.py  test_fourier.py
docker/: Dockerfile  README.md  install_r_packages.r  jupyterhub_config.py
ethoscopy/: __init__.py
ethoscopy/hmm/: hmm_plot_functions.py
ethoscopy/misc/: bootstrap_CI.py  format_warning.py  rle.py
src/ethoscopy/: __init__.py  analyse.py  behavpy.py  behavpy_HMM_class.py  behavpy_class.py  behavpy_core.py  behavpy_create.py  behavpy_draw.py  behavpy_periodogram_class.py  behavpy_plotly.py  behavpy_plots.py  behavpy_seaborn.py  load.py  metadata_db.py
src/ethoscopy.egg-info/: PKG-INFO
src/ethoscopy/hmm/: hmm_functions.py
src/ethoscopy/misc/: bootstrap_CI.py  check_conform.py  circadian_bars.py  general_functions.py  get_HMM.py  get_tutorials.py  hmm_functions.py  periodogram.py  periodogram_functions.py  rle.py  save_fig.py  validate_datetime.py
src/ethoscopy/misc/tutorial_data/: 4_states_F_WT.pkl  4_states_M_WT.pkl  circadian_meta.pkl  overview_meta.pkl
test/: load_test.py  load_test_graphs.py
tutorial_notebook/: 1_Overview_tutorial.ipynb  2_HMM_tutorial.ipynb  3_Circadian_tutorial.ipynb  4_Navigating_db_tutorial.ipynb  5_Ethoscopy_catch22_tutorial.ipynb  5_Ethoscopy_to_hctsa_tutorial.ipynb  6_Ethoscopy_to_hctsa_tutorial.ipynb  7_Working_with_custom_data.ipynb  ethoscope_db.csv  jones_et_al_metadata.csv  notebook_paper.ipynb  test_response.ipynb
