[tool.poetry]
name = "ethoscopy"
version = "1.2.23"
description = "A python based toolkit to download and anlyse data from the Ethoscope hardware system."
authors = ["Blackhurst Laurence <l.blackhurst19@imperial.ac.uk>"]
license = "GNU GPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8"
pandas = "^1.4.2"
numpy = "^1.22.3"
plotly = "^5.7.0"
scipy = "^1.8.0"
tabulate = "^0.8.10"
colour = "^0.1.5"
kaleido = "0.2.1"
astropy = "^5.1.1"
PyWavelets = "^1.4.1"
hmmlearn = "^0.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
