[tool.poetry]
name = "ethoscopy"
version = "2.0.dev"
description = "\"A python based toolkit to download and anlyse data from the Ethoscope hardware system.\""
authors = ["Lblackhurst29 <l.blackhurst19@imperial.ac.uk>"]
license = "\"GNU GPLv3\""
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.4"
pandas = "^2.2.2"
plotly = "^5.22.0"
seaborn = "^0.13.2"
tabulate = "^0.9.0"
colour = "^0.1.5"
hmmlearn = "^0.3.2"
pywavelets = "^1.6.0"
nbformat = "^5.10.4"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
